--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
               ></button>
             </div>
             <div
-              class="modal-body d-flex justify-content-center align-items-center"
+              class="modal-body"
             >
               <div class="row">
-                <div class="col d-flex justify-content-center p-5">
-                  <div id="spinner" class="d-none w-100 h-100" role="status">
+                <div class="col d-flex justify-content-center align-items-center p-5">
+                  <div id="spinner" class="d-none w-100 h-100 mh-100 text-center" role="status">
                     <svg
                       viewBox="0 0 202 202"
                       xlmns="https://www.w3.org/2000/svg"
@@ -232,7 +232,7 @@
           <form>
             <div class="input-group d-flex flex-wrap justify-content-center">
               <div
-                class="input-group-text form-control w-100 mb-3"
+                class="input-group-text form-control w-100"
                 style="max-width: 300px"
               >
                 <img
@@ -261,7 +261,7 @@
                 multiple
                 accept="image/*"
               >
-                <h2 class="pe-none user-select-none">
+                <h2 class="pe-none user-select-none text-center p-2">
                   Drag and drop or upload your file.
                 </h2>
               </label>
